--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,157 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="54dp"
-        android:layout_height="52dp"
-        android:background="@drawable/button_states"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="652dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="71dp"
+                    android:text="Главная страница"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="20dp"
+                    android:textAlignment="center"
+                    android:textColor="#3ABC40"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/btnSetting"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:onClick="goToSettings"
+                    app:srcCompat="@drawable/setting"
+                    android:layout_marginStart="-70dp"
+                    />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="193dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:text="Ваш вес:"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/twVes"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="187dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Активность:"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/twActiw"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Отстаток калорий:"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="22sp" />
+
+            <ProgressBar
+                android:id="@+id/progress"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_gravity="center"
+                android:inputType="none"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:layout_width="323dp"
+                android:layout_height="20dp"
+                android:progressTint="#7FEF61" />
+
+            <TextView
+                android:id="@+id/twProgress"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Отстаток калорий:"
+                android:textAlignment="center"
+                android:textColor="#3ABC40"
+                android:textSize="22sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="252dp"
+                android:orientation="horizontal"></LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="93dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnMainFromFood"
+                    android:layout_width="103dp"
+                    android:layout_height="103dp"
+                    android:onClick="btbGoMenu"
+                    app:srcCompat="@drawable/gs" />
+
+                <ImageButton
+                    android:id="@+id/btnSportFromFood"
+                    android:layout_width="103dp"
+                    android:layout_height="103dp"
+                    android:onClick="goTren"
+                    app:srcCompat="@drawable/t" />
+
+                <ImageButton
+                    android:id="@+id/btnDishesFromFood"
+                    android:layout_width="103dp"
+                    android:layout_height="103dp"
+                    android:onClick="btnGoDishes"
+                    app:srcCompat="@drawable/r" />
+
+                <ImageButton
+                    android:id="@+id/btnFoodFromFood"
+                    android:layout_width="103dp"
+                    android:layout_height="103dp"
+                    android:onClick="btnGoProductDiary"
+                    app:srcCompat="@drawable/dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
